# simple-value-betting

./: .env.aws.example  .env.example  .gitignore  docker-compose.yml  models.yaml
.github/workflows/: deploy.yml
analysis/src/: config.py  inference.py  lookup.py  main.py  watcher.py
analysis_sl/: Dockerfile
analysis_sl/src/: inference.py
collector/: Dockerfile
collector/src/: main.py  market.py  s3_sync.py  storage.py  websocket_client.py
data/: raw_data.db.wal
data/raw/: ticks_0xb216f75c2233b4ec642e97921b3e129b1d53387d73fed670e6765746890cdbc0_20260518_080510.parquet  ticks_0xcb50e658c03a8ef503d0bf8db068209558cc0b8be4827944e40b8980a4b64888_20260518_075000.parquet
docs/: ARCHITECTURE.md  DATA_REFERENCE.md  DIAGRAMS.md  README.md
infra/: cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  networking.tf  outputs.tf  s3.tf  task-definition-dev.json  task-definition-prod.json  variables.tf
infra/environments/: dev.tfvars  prod.tfvars
model/: Dockerfile  pyproject.toml
model/src/: api.py  config.py  features.py  inference.py  main.py  predictor.py  storage.py  trades.py  trainer.py  watcher.py
model_sl/: Dockerfile
model_sl/src/: inference.py  trades.py
notebooks/: data_quality.ipynb  eda.ipynb  edge_analysis.ipynb  filtered_trades.ipynb  model_comparison.ipynb  pyproject.toml  trade_analysis.ipynb
scripts/: stop-dev.sh
src/analysis/: Dockerfile  pyproject.toml
src/analysis/src/: inference.py  lookup.py  trades.py  watcher.py
src/analysis_sl/: Dockerfile
src/analysis_sl/src/: inference.py  trades.py
src/collector/: Dockerfile  pyproject.toml
src/collector/src/: btc_feed.py  coinbase_feed.py  config.py  kraken_feed.py  main.py  market.py  markets.yaml  storage.py  websocket_client.py
src/model/: Dockerfile
src/model/src/: api.py  config.py  features.py  inference.py  main.py  models.yaml  predictor.py  registry.py  trades.py  trainer.py  watcher.py
src/model_sl/: Dockerfile
src/model_sl/src/: inference.py  trades.py
src/shared/: table_store.py
src/trade_engine/: Dockerfile  pyproject.toml
src/trade_engine/src/: api.py  config.py  features.py  history.py  inference.py  (+10 more)
