[project]
name = "model"
version = "0.1.0"
description = "Polymarket ML model training and prediction"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "lightgbm>=4.5.0",
    "joblib>=1.4.0",
    "boto3>=1.35.0",
    "pydantic-settings>=2.5.0",
    "watchfiles>=0.24.0",
    "pytz>=2024.1",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
