[project]
name = "analysis"
version = "0.1.0"
description = "Polymarket empirical probability estimator"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "duckdb>=1.1.0",
    "pytz>=2024.1",
    "watchfiles>=0.24.0",
    "pydantic-settings>=2.5.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
