[project]
name = "collector"
version = "0.1.0"
description = "Polymarket WebSocket data collector"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "boto3>=1.35.0",
    "pydantic-settings>=2.5.0",
    "requests>=2.32.0",
    "pytz>=2024.1",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
